@@ -304,6 +304,10 @@ Release date: TBA
 
   Closes #4369 and #6523
 
+* Fix bug where it writes a plain text error message to stdout, invalidating output formats.
+
+  Closes #6597
+
 * ``is_class_subscriptable_pep585_with_postponed_evaluation_enabled`` has been deprecated.
   Use ``subscriptable_with_postponed_evaluation_enabled`` instead.
 
